feat: add basic keyboard layout

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,2 +1,9 @@
+// Abstracts
+@import "abstracts/constants";
+
+// Base
+@import "base/base";
+
 // Components
-@import "components/index";
+@import "components/keyboard";
+@import "components/main";
