feat: add handlers for pressing functional and non-functional keys

--- a/src/sass/components/_keyboard.scss
+++ b/src/sass/components/_keyboard.scss
@@ -15,7 +15,7 @@
   }
 
   &__key {
-    width: 4rem;
+    min-width: 4rem;
     height: 4rem;
     line-height: 4rem;
     text-align: center;
@@ -37,4 +37,8 @@
     border: 1px solid rgba(255, 255, 255, 15%);
     transform: scale(0.95);
   }
+}
+
+.hidden {
+  display: none;
 }
