--- a/src/sass/components/_keyboard.scss
+++ b/src/sass/components/_keyboard.scss
@@ -10,7 +10,7 @@
     width: 100%;
     height: 4rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     gap: 0.6rem 0.8rem;
   }
 
@@ -41,4 +41,17 @@
 
 .hidden {
   display: none;
+}
+
+.Space, .ShiftLeft, .Backspace {
+  flex-grow: 1;
+}
+
+.Enter {
+  width: 5.5rem;
+  flex-grow: 1;
+}
+
+.CapsLock {
+  flex-grow: 0.5;
 }
