refactor: change hardcoded colors to constants

--- a/src/sass/abstracts/_constants.scss
+++ b/src/sass/abstracts/_constants.scss
@@ -1,1 +1,8 @@
 $font-arial: "Arial", Verdana, sans-serif;
+
+// colors
+$border-color: rgba(255, 255, 255, 15%);
+$background-main-color: #414141;
+$background-key-color: #252525;
+$background-hover-color: #38383d;
+$background-active-color: #47474d;
