--- a/src/sass/components/_keyboard.scss
+++ b/src/sass/components/_keyboard.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: column;
   row-gap: 0.8rem;
-  background: #414141;
+  background: $background-main-color;
   padding: 1rem;
   border-radius: 1rem;
 
@@ -20,21 +20,21 @@
     line-height: 4rem;
     text-align: center;
     color: rgba(255, 255, 255, 70%);
-    background: #252525;
-    border: 1px solid #252525;
+    background: $background-key-color;
+    border: 1px solid $background-key-color;
     border-radius: 0.3rem;
     cursor: pointer;
     transition: border 0.1s, background 0.3s, transform 0.3s;
 
     &:hover {
-      background: #38383d;
-      border: 1px solid rgba(255, 255, 255, 15%);
+      background: $background-hover-color;
+      border: 1px solid $border-color;
     }
   }
 
   .active {
-    background: #47474d;
-    border: 1px solid rgba(255, 255, 255, 15%);
+    background: $background-active-color;
+    border: 1px solid $border-color;
     transform: scale(0.95);
   }
 }
